adding paw wires

--- a/portfolio/brm.html
+++ b/portfolio/brm.html
@@ -50,7 +50,7 @@
 
           <!-- Logo -->
 
-<!--           <div class="specimen">
+          <!--  <div class="specimen">
             <img src="../assets/img/projects/brm/brm_tile-1.jpg"
                  alt="Elephant at sunset" class="paper">
             <div class="caption">Homepage Wireframe</div>
@@ -74,14 +74,20 @@
             <div class="caption">Final Homepage Design</div>
           </div>
 
-<!--           <div class="specimen">
-            <img src="../assets/img/projects/brm/design-homepage_v3c.jpg"
+          <!--  <div class="specimen">
+            <img src="../assets/img/projects/brm/design-article.jpg"
                  alt="Elephant at sunset" class="paper">
             <div class="caption">Final Article Design</div>
           </div> -->
 
-          <p>work done at brunello</p>
-          <p>Last edited</p>
+          <div class="credits">
+            <p class="attribution">Work done at Brunello, Inc.</p>
+            <ul class="team-list">
+              <li>Adam Hoyle: PM</li>
+              <li>Kyle Langford: Designer, Drupal Developer</li>
+            </ul>
+            <p class="last-edit">Last Edit: 5.30.19</p>
+          </div>
 
         </article>
       </div>
