--- a/portfolio/cpl.html
+++ b/portfolio/cpl.html
@@ -88,8 +88,14 @@
             <div class="caption">Garage entrance</div>
           </div>
 
-          <p>Work done at wojchehowski</p>
-          <p>Last edited</p>
+          <div class="credits">
+            <p class="attribution">Work done at Woj Design</p>
+            <ul class="team-list">
+              <li>Tom Woj: PM</li>
+              <li>Kyle Langford: Project Designer</li>
+            </ul>
+            <p class="last-edit">Last Edit: 5.30.19</p>
+          </div>
 
         </article>
       </div>
