--- a/portfolio/fitnessapp.html
+++ b/portfolio/fitnessapp.html
@@ -49,34 +49,42 @@
           <p>Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Curabitur blandit tempus porttitor. Sed posuere consectetur est at lobortis. Aenean lacinia bibendum nulla sed consectetur. Donec sed odio dui. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur et.</p>
 
           <video controls width="250">
-
-              <source src="/media/examples/flower.webm"
-                      type="video/webm">
-
-              <source src="/media/examples/flower.mp4"
-                      type="video/mp4">
-
-              Sorry, your browser doesn't support embedded videos.
+            <source src="/media/examples/flower.webm"
+                    type="video/webm">
+            <source src="/media/examples/flower.mp4"
+                    type="video/mp4">
+            Sorry, your browser doesn't support embedded videos.
           </video>
 
-          <figure>
+          <div class="specimen">
             <img src="../assets/img/case-studies/test-2.jpg"
                  alt="Elephant at sunset">
-            <figcaption>Donec id elit non mi porta gravida at eget metus.</figcaption>
-          </figure>
+            <div class="caption">Donec id elit non mi porta gravida at eget metus.</div>
+          </div>
 
-          <figure>
+          <div class="specimen">
             <img src="../assets/img/case-studies/test.png"
                  alt="Elephant at sunset">
-            <figcaption>Donec id elit non mi porta gravida at eget metus.</figcaption>
-          </figure>
+            <div class="caption">Donec id elit non mi porta gravida at eget metus.</div>
+          </div>
 
-          <figure>
+          <div class="specimen">
             <img src="https://via.placeholder.com/600"
                  alt="Elephant at sunset">
-            <figcaption>Donec id elit non mi porta gravida at eget metus.</figcaption>
-          </figure>
+            <div class="caption">Donec id elit non mi porta gravida at eget metus.</div>
+          </div>
           
+          <div class="credits">
+            <p class="attribution">Work done at Brunello, Inc.</p>
+            <ul class="team-list">
+              <li>Nicole Baltzer: PM</li>
+              <li>Jason Fournier: Designer</li>
+              <li>Kyle Langford: Designer, Front-End Developer</li>
+              <li>Christian: Developer</li>
+            </ul>
+            <p class="last-edit">Last Edit: 5.30.19</p>
+          </div>
+
         </article>
       </div>
     </div>
