--- a/portfolio/mena.html
+++ b/portfolio/mena.html
@@ -59,15 +59,26 @@
                  alt="Elephant at sunset" class="paper">
             <div class="caption">Landing Page</div>
           </div>
+          
+          <div class="text--center button-group">
+            <a href="https://paw.princeton.edu" class="button">Prototype</a>
+          </div>
 
-          <a href="https://paw.princeton.edu" class="button">Prototype</a>
           <!-- http://kylelangford.com/demo/mena.wires/events.php -->
           <!-- http://kylelangford.com/demo/mena.wires/section.php -->
           <!-- http://kylelangford.com/demo/mena.wires/news-article.php -->
           <!-- http://kylelangford.com/demo/mena.wires/by-laws.php -->
           
-          <p>Work done at Raskyl</p>
-          <p>Last edited</p>
+          <div class="credits">
+            <p class="attribution">Work done at Brunello, Inc.</p>
+            <ul class="team-list">
+              <li>Nicole Baltzer: PM</li>
+              <li>Jason Fournier: Designer</li>
+              <li>Kyle Langford: Designer, Front-End Developer</li>
+              <li>Mike Calebrese: Drupal Developer</li>
+            </ul>
+            <p class="last-edit">Last Edit: 5.30.19</p>
+          </div>
 
         </article>
       </div>
