--- a/demo/paw.wires/inc/article-bottom--readthisthat.html
+++ b/demo/paw.wires/inc/article-bottom--readthisthat.html
@@ -1,28 +1,28 @@
 <section class="readthisthat">
-
-  <div class="read-this">
-    <article class="item oversized">
-      <div class="overlay-container">
-        <img src="http://placehold.it/1200x700">
-        <div class="overlay">
-          <div class="eyebrow">EYEBROW</div>
-          <h3><a class="trail" href="standard-article.html">Cras mattis consectetur purus sit amet fermentum.</a></h3>
-          <div class="description">Vestibulum id ligula porta felis euismod semper.</div>
+  <div class="inner">
+    <div class="read-this">
+      <article class="item oversized">
+        <div class="overlay-container">
+          <img src="http://placehold.it/1200x700">
+          <div class="overlay">
+            <div class="eyebrow">EYEBROW</div>
+            <h3><a class="trail" href="standard-article.html">Cras mattis consectetur purus sit amet fermentum.</a></h3>
+            <div class="description">Vestibulum id ligula porta felis euismod semper.</div>
+          </div>
         </div>
-      </div>
-    </article>
-  </div>
-  <div class="read-that">
-    <article class="item oversized">
-      <div class="overlay-container">
-        <img src="http://placehold.it/1200x700">
-        <div class="overlay">
-          <div class="eyebrow">EYEBROW</div>
-          <h3><a class="trail" href="standard-article.html">Cras mattis consectetur purus sit amet fermentum.</a></h3>
-          <div class="description">Vestibulum id ligula porta felis euismod semper.</div>
+      </article>
+    </div>
+    <div class="read-that">
+      <article class="item oversized">
+        <div class="overlay-container">
+          <img src="http://placehold.it/1200x700">
+          <div class="overlay">
+            <div class="eyebrow">EYEBROW</div>
+            <h3><a class="trail" href="standard-article.html">Cras mattis consectetur purus sit amet fermentum.</a></h3>
+            <div class="description">Vestibulum id ligula porta felis euismod semper.</div>
+          </div>
         </div>
-      </div>
-    </article>
+      </article>
+    </div>
   </div>
-
 </section>
