--- a/portfolio/paw.html
+++ b/portfolio/paw.html
@@ -68,6 +68,8 @@
             <div class="caption">Issue #</div>
           </div>
 
+          <p>Competitor Research</p>
+
           <div class="specimen">
             <img src="../assets/img/projects/paw/style-tile-1.png"
                  alt="Elephant at sunset">
@@ -143,26 +145,28 @@
           <div class="specimen">
             <img src="../assets/img/projects/paw/wireframe-rwd-article-page.jpg"
                  alt="Elephant at sunset">                 
-            <div class="caption">Full Fidelity Article Wireframe, one of the few we produced.</div>
+            <div class="caption">Full Fidelity Article Wireframe, one of the few that was produced.</div>
           </div>
 
-          <div class="specimen">
+          <!-- <div class="specimen">
             <img src="../assets/img/projects/paw/article.png"
                  alt="Elephant at sunset">
             <div class="caption">Final Comp produced by Jay Fournier.</div>
-          </div>
+          </div> -->
 
           <p>Prototyping also allowed us to iterate more on our FE code. 41 pages, ~30 components with 111 variations in content. So not only did we mkae this more managable but ultimately we were able to show more pages then we did with guideposts, in less time. Win. 2000 lines of CSS.</p>
 
-          <a href="/demo/paw.wires/index.html" class="button">Prototype</a>
+          <pre><code>
+          $(function(){
+            $('<div class="header"></div>').appendTo('.header-region').load("inc/header.html");
+          });
+          </code></pre>
+
+          <div class="text--center button-group">
+            <a href="/demo/paw.wires/index.html" class="button">Prototype</a>          
+          </div>
 
           <p>Design</p>
-
-          <div class="specimen">
-            <img src="../assets/img/projects/paw/design.png"
-                 alt="Elephant at sunset">
-            <div class="caption">Final Comp produced by Jay Fournier.</div>
-          </div>
 
           <div class="specimen">
             <img src="../assets/img/projects/paw/content-grid.png"
@@ -170,76 +174,20 @@
             <div class="caption">Dynamic Grid.</div>
           </div>
 
-          <a href="https://paw.princeton.edu" class="button">Live Site</a>
+          <div class="text--center button-group">
+            <a href="https://paw.princeton.edu" class="button">Live Site</a>
+          </div>
 
-          <code><pre>
-            <body class="front">
-              <header class="header-region"></header>
-              <section class="wrap">
-                <div class="content-top"></div>
-                <div class="main">
-                  <div class="inner">
-                    <div class="content-body"></div>
-                  </div>
-                </div>
-                <aside class="content-bottom"></aside>
-                <aside class="sidebar">
-                  <div class="sidebar-inner"></div>
-                </aside>
-              </section>
-
-              <footer class="footer-region"></footer>
-
-              <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-              <script src="dist/js/scripts.min.js"></script>
-              <script>
-              $(function(){
-                // Header
-                $('<div class="header"></div>').appendTo('.header-region').load("inc/header.html");
-
-                // Content Top
-                $('<div class="block"></div>').appendTo('.content-top').load("inc/marquee--three.html");
-
-                // Body
-                $('<section class="block"></section>').appendTo('.content-body').load("inc/section-list--news-and-features.html");
-                $('<section class="block"></section>').appendTo('.content-body').load("inc/section-list--princetonians.html");
-                $('<section class="block"></section>').appendTo('.content-body').load("inc/section-list--memorials.html");
-                $('<section class="block"></section>').appendTo('.content-body').load("inc/section-list--inbox.html");
-                $('<section class="block"></section>').appendTo('.content-body').load("inc/section-list--books-featured.html");
-
-                // Content Bottom
-                $('<div class="block"></div>').appendTo('.content-bottom').load("inc/content-bottom--web-exclusives.html");
-                $('<div class="block"></div>').appendTo('.content-bottom').load("inc/content-bottom--classifieds.html");
-
-                // Sidebar
-                $('<div class="container"></div>').appendTo('.sidebar-inner').load("inc/sidebar--image.html");
-                $('<div class="block"></div>').appendTo('.sidebar-inner').load("inc/sidebar--tiger-of-the-week.html");
-                $('<div class="block"></div>').appendTo('.sidebar-inner').load("inc/sidebar--most-commented.html");
-                $('<div class="block"></div>').appendTo('.sidebar-inner').load("inc/sidebar--latest-news.html");
-                $('<div class="block"></div>').appendTo('.sidebar-inner').load("inc/sidebar--classified-ad.html");
-
-                // Footer
-                $('<div class="block"></div>').appendTo('.footer-region').load("inc/footer--image.html");
-                $('<div class="wrap"></div>').appendTo('.footer-region').load("inc/footer--subscription-block.html");
-                $('<footer class="footer"></footer>').appendTo('.footer-region').load("inc/footer.html");
-                $('<div class="block"></div>').appendTo('.footer-region').load("inc/footer--credits.html");
-              });
-              </script>
-
-            </body>
-
-          </pre></code>
-
-          <p>Work done at brunello</p>
-
-          <ul>
-            <li>Nicole Baltzer: PM</li>
-            <li>Jason Fournier: Designer</li>
-            <li>Kyle Langford: Designer, Front-End Developer</li>
-            <li>Mike Calebrese: Drupal Developer</li>
-          </ul>
-
-          <p>Last Edit</p>
+          <div class="credits">
+            <p class="attribution">Work done at Brunello, Inc.</p>
+            <ul class="team-list">
+              <li>Nicole Baltzer: PM</li>
+              <li>Jason Fournier: Designer</li>
+              <li>Kyle Langford: Designer, Front-End Developer</li>
+              <li>Mike Calebrese: Drupal Developer</li>
+            </ul>
+            <p class="last-edit">Last Edit: 5.30.19</p>
+          </div>
 
         </article>
       </div>
