--- a/portfolio/all.html
+++ b/portfolio/all.html
@@ -43,17 +43,11 @@
   <main class="container">
     <div class="row flex flex--justify pad-default">
       <div class="column two-thirds">
-        <ul class="list">
+        <ul class="list portfolio">
           <li class="list__item">
             <a href="/portfolio/paw.html">
               <span class="label">Princeton Alumni Magazine</span>
               <div class="description">Site Design and Drupal build.</div>
-            </a>
-          </li>
-          <li class="list__item">
-            <a href="/portfolio/fitnessapp.html">
-              <span class="label">Elev8d Fitness</span>
-              <div class="description">Angular Video Component.</div>
             </a>
           </li>
           <li class="list__item">
