--- a/portfolio/cpl.html
+++ b/portfolio/cpl.html
@@ -44,7 +44,7 @@
     <div class="row flex flex--justify pad-default">
       <div class="column two-thirds">
         <article class="content">
-          <p>This is for the Cambridge Public Library renovated modern wing. I worked as a project designer with the principal design to create designs and draft the art work sent to the fabricators. This work included all visable signage for room, directional signs, elevators, bathrooms, and the large display banners you see below. This also included some exterior signage for the building, garage and the lawn.</p>
+          <p>This project was for the Cambridge Public Library with the addition of the renovated modern wing. I worked as a project designer with the principal designer to create designs and draft the art work sent to the fabricators. This work included all signage for the interior and exterior of the building.</p>
 
           <div class="specimen">
             <img src="../assets/img/projects/cpl/p-cpl.jpg"
@@ -89,10 +89,10 @@
           </div>
 
           <div class="credits">
-            <p class="attribution">Work done at Woj Design</p>
+            <p class="attribution">Work done at Wojciechowski Design</p>
             <ul class="team-list">
-              <li>Tom Woj: PM</li>
               <li>Kyle Langford: Project Designer</li>
+              <li>Tom Wojciechowski: Principal designer</li>
             </ul>
             <p class="last-edit">Last Edit: 5.30.19</p>
           </div>
