--- a/portfolio/mena.html
+++ b/portfolio/mena.html
@@ -25,7 +25,7 @@
 </head>
 <body class="page page--front">
 
-  <header class="container size-to-window brm">
+  <header class="container size-to-window mena">
     <div class="row flex flex-align--center flex--justify fill-height">
 
       <nav class="position-top-left">
@@ -34,7 +34,7 @@
 
       <div class="column half text--center">
         <h1 class="page__title">Mass. Emergency Nurse Association</h1>
-        <p class="description">Site Design</p>
+        <p class="description">Site Design and Build</p>
       </div>
 
     </div>
@@ -44,24 +44,20 @@
     <div class="row flex flex--justify pad-default">
       <div class="column two-thirds">
         <article class="content">
-          <h4>Pellentesque Vehicula Ultricies</h4>
+          <h4>Labor of Love</h4>
 
-          <p>My wife is a nurse so this project.</p>
+          <p>The Mass. Emergency Nurse Association is the state chapter of the national organization. They needed a website to post information and organize events. My wife is a nurse and also a member so this project held a little extra weight. There was a knowledge gap in this project so I decided the best way to show a design was to build it. I utilized mood-boards to show look and feel then implemented the remaining features based on that.</p>
 
           <div class="specimen">
-            <img src="../assets/img/projects/brm/brm_tile-2.jpg"
+            <img src="../assets/img/projects/mena/maena-moodboard_v2d.png"
                  alt="Elephant at sunset" class="paper">
             <div class="caption">Style Direction</div>
           </div>
 
-          <div class="specimen">
-            <img src="../assets/img/projects/brm/brm_tile-2.jpg"
-                 alt="Elephant at sunset" class="paper">
-            <div class="caption">Landing Page</div>
-          </div>
+          <p>Design Prototype</p>
           
-          <div class="text--center button-group">
-            <a href="https://paw.princeton.edu" class="button">Prototype</a>
+          <div class="button-group">
+            <a href="/demo/mena.wires/index.php" class="button button--primary">Prototype</a>
           </div>
 
           <!-- http://kylelangford.com/demo/mena.wires/events.php -->
@@ -70,12 +66,10 @@
           <!-- http://kylelangford.com/demo/mena.wires/by-laws.php -->
           
           <div class="credits">
-            <p class="attribution">Work done at Brunello, Inc.</p>
+            <p class="attribution">Work done at Raskyl</p>
             <ul class="team-list">
-              <li>Nicole Baltzer: PM</li>
-              <li>Jason Fournier: Designer</li>
-              <li>Kyle Langford: Designer, Front-End Developer</li>
-              <li>Mike Calebrese: Drupal Developer</li>
+              <li>Kyle Langford: Designer, Developer</li>
+              <li>Rachel Sorkin: Project Manager</li>
             </ul>
             <p class="last-edit">Last Edit: 5.30.19</p>
           </div>
