--- a/portfolio/brm.html
+++ b/portfolio/brm.html
@@ -34,7 +34,7 @@
 
       <div class="column half text--center">
         <h1 class="page__title">Bally Ribbon Mills</h1>
-        <p class="description">Site Design</p>
+        <p class="description">Site Design and Build</p>
       </div>
 
     </div>
@@ -44,17 +44,28 @@
     <div class="row flex flex--justify pad-default">
       <div class="column two-thirds">
         <article class="content">
-          <h4>Pellentesque Vehicula Ultricies</h4>
+          <h4>Can you tell me again what you do?</h4>
 
-          <p>One of my first full design projects at Brunello. This design for Bally Ribbon Mills has held up well over the years, even longer then the site itself! Style tiles were all the rage at the time so this project went from wireframes to style tiles to full page mockups. I also built the full FE and BE of this site in Drupal 7.</p>
+          <p>One of my first design projects at Brunello was for a company that produced narrow fabric and advanced composites for industrial/military application. It was important for Bally to be Modern and Authoritive. This design for Bally Ribbon Mills has held up well over the years, even longer then the site itself! This project used sitemaps, wireframes, style-tiles, and full-page mockups. I built the site in Drupal 7.</p>
 
           <!-- Logo -->
+          <div class="specimen">
+            <img src="../assets/img/projects/brm/brm-sitemap_v1.jpg"
+                 alt="Elephant at sunset" class="paper">
+            <div class="caption">Final Sitemap</div>
+          </div>
 
-          <!--  <div class="specimen">
-            <img src="../assets/img/projects/brm/brm_tile-1.jpg"
+           <div class="specimen">
+            <img src="../assets/img/projects/brm/brm-wires_page_1.png"
                  alt="Elephant at sunset" class="paper">
             <div class="caption">Homepage Wireframe</div>
-          </div> -->
+          </div>
+
+           <div class="specimen">
+            <img src="../assets/img/projects/brm/brm-wires_page_3.png"
+                 alt="Elephant at sunset" class="paper">
+            <div class="caption">Section Wireframe</div>
+          </div>
 
           <div class="specimen">
             <img src="../assets/img/projects/brm/brm_tile-2.jpg"
@@ -69,21 +80,23 @@
           </div>
 
           <div class="specimen">
+            <img src="../assets/img/projects/brm/square-2.jpg"
+                 alt="Elephant at sunset" class="paper">
+            <img src="../assets/img/projects/brm/square-3.jpg"
+                 alt="Elephant at sunset" class="paper">                 
+            <div class="caption">Style Direction #2</div>
+          </div>
+
+          <div class="specimen">
             <img src="../assets/img/projects/brm/design-homepage_v3c.jpg"
                  alt="Elephant at sunset" class="paper">
             <div class="caption">Final Homepage Design</div>
           </div>
 
-          <!--  <div class="specimen">
-            <img src="../assets/img/projects/brm/design-article.jpg"
-                 alt="Elephant at sunset" class="paper">
-            <div class="caption">Final Article Design</div>
-          </div> -->
-
           <div class="credits">
             <p class="attribution">Work done at Brunello, Inc.</p>
             <ul class="team-list">
-              <li>Adam Hoyle: PM</li>
+              <li>Adam Hoyle: Project Manager</li>
               <li>Kyle Langford: Designer, Drupal Developer</li>
             </ul>
             <p class="last-edit">Last Edit: 5.30.19</p>
