--- a/portfolio/brm.html
+++ b/portfolio/brm.html
@@ -79,12 +79,12 @@
             <div class="caption">Style Direction #2</div>
           </div>
 
-          <div class="specimen">
+          <div class="specimen text--center">
             <img src="../assets/img/projects/brm/square-2.jpg"
                  alt="Elephant at sunset" class="paper">
             <img src="../assets/img/projects/brm/square-3.jpg"
                  alt="Elephant at sunset" class="paper">                 
-            <div class="caption">Style Direction #2</div>
+            <div class="caption">Final Logo</div>
           </div>
 
           <div class="specimen">
