--- a/portfolio/mena.html
+++ b/portfolio/mena.html
@@ -54,16 +54,23 @@
             <div class="caption">Style Direction</div>
           </div>
 
+          <div class="specimen">
+            <img src="../assets/img/projects/mena/article.png"
+                 alt="Elephant at sunset" class="paper">
+            <div class="caption">Style Direction</div>
+          </div>
+
+          <div class="specimen">
+            <img src="../assets/img/projects/mena/chapter-page.png"
+                 alt="Elephant at sunset" class="paper">
+            <div class="caption">Style Direction</div>
+          </div>
+
           <p>Design Prototype</p>
           
           <div class="button-group">
             <a href="/demo/mena.wires/index.php" class="button button--primary">Prototype</a>
           </div>
-
-          <!-- http://kylelangford.com/demo/mena.wires/events.php -->
-          <!-- http://kylelangford.com/demo/mena.wires/section.php -->
-          <!-- http://kylelangford.com/demo/mena.wires/news-article.php -->
-          <!-- http://kylelangford.com/demo/mena.wires/by-laws.php -->
           
           <div class="credits">
             <p class="attribution">Work done at Raskyl</p>
