--- a/portfolio/paw.html
+++ b/portfolio/paw.html
@@ -46,7 +46,13 @@
         <article class="content">
           <h4>Content is King</h4>
 
-          <p>My accomplishments for this project include crafting a process from design to development. I designed reusable components and list styles that were used to layout all the pages of the site. I was ultimately responsible for creating the sitemap, mobile-priority, wireframes, and working prototype. I also produced all the front-end production code, much of which was recycled from the prototype.</p>
+          <div class="specimen">
+            <img src="../assets/img/projects/paw/screenshot-2.jpg"
+                 alt="Elephant at sunset" class="paper">
+            <div class="caption">Screenshot</div>
+          </div>
+
+          <p>My accomplishments for this project include crafting a process from design to development. I designed reusable components and list styles that were used to layout all the pages of the site. I was responsible for creating the sitemap, mobile-priority, wireframes, and working prototype. I also produced all the front-end production code, much of which was recycled from the prototype.</p>
 
           <div class="specimen">
             <img src="../assets/img/projects/paw/way-back.jpg"
@@ -83,8 +89,6 @@
                  alt="Elephant at sunset" class="paper">
             <div class="caption">Near Final Sitemap.</div>
           </div>
-
-          <p>Around 2012 the industry changed with real support for css media queries. We had been making incremental improvements to our process since then. We started to intergrate RWD ideas and DRY concepts around a similar time but it took until 2015 for our processes to really embrace this change as well.</p>
 
           <div class="specimen">
             <div class="stack">
@@ -155,9 +159,9 @@
             <div class="caption">Full Fidelity Wireframe - Kyle Langford</div>
           </div>
 
-          <p>My proposal was to only produce 5 wireframe pages at phone/tablet/desktop. The rest of the site would be designed using a component library derived from those 5 pages. The goal was to make a fully working version of the site in html/css/js at a wireframe fidelity and show it to the client. Changes would be incorporated directly into the prototype. This would be a huge departure from what we had done in the past. Luckily the group at PAW was supportive and interested in new ways of working.</p>
+          <p>My proposal was to only produce 5 wireframes at phone/tablet/desktop. The rest of the site would be designed using a components derived from those pages. The goal was to make a fully working version of the site in html/css/js and show it to the client. Changes would be incorporated directly into the prototype speeding up our process. This would be a huge departure from what we had done in the past. Luckily the group at PAW was supportive and interested in new ways of working.</p>
 
-          <p>I devised a simple template system that I used to create the prototype. 41 templates made with approx 30 components with about 111 variations in content were produced. This made the process extremely managable and about 2000 lines of CSS were reused to start the production build. We were able to show more pages at more screen sizes than we did prevously. </p>
+          <p>I devised a simple template system that I used to create the prototype. This made the process extremely managable and about 2000 lines of CSS were reused to start the production build. We were able to show more pages at more screen sizes than we did prevously. We ended with 41 pages made with approx 30 components with about 100 variations. </p>
 
           <pre><code>
 $(elem).appendTo('.header-region').load("inc/header.html");
